@@ -188,6 +188,7 @@
 \input gridrend.tex
 \input gridtbl.tex
 \input gridsizr.tex
+\input gupdlock.tex
 \input hashmap.tex
 \input hashset.tex
 \input hash.tex
